# notification-svc-core

./: .env.example  Makefile  README.md  pyproject.toml  pytest.ini  tox.ini
examples/: email_sendgrid.py  smtp.py
notification_services/: __init__.py
notification_services/backends/: core.py
notification_services/backends/onesignal/: config.py  entity.py  onesignal_backend.py
notification_services/backends/sendgrid/: config.py  sendgrid_backend.py
notification_services/backends/smtp/: config.py  smtp_backend.py
notification_services/backends/twilio/: config.py  entity.py  twilio_backend.py
notification_services/repositories/: core.py  mailchimp_repository.py  onesignal_repository.py  sendgrid_repository.py  sms_twilio_repository.py  smtp_repository.py
notification_services/services/: __init__.py
tests/: conftest.py
tests/repositories/: test_onesignal_repository.py  test_sendgrid_repository.py  test_sms_twilio_repository.py
tests/services/: test_service.py  test_service_email_sendgrid.py  test_service_email_smtp.py  test_service_push_notification_onesignal.py  test_service_sms_twilio.py
